--- a/RMS.App/Views/Requisitions/Reply.cshtml
+++ b/RMS.App/Views/Requisitions/Reply.cshtml
@@ -1,57 +1,69 @@
 ﻿@model RMS.App.ViewModels.FeedbackViewModel
 
 @{
-    ViewBag.Title = "Reply";
-    //Layout = "~/Views/Shared/_LayoutLogIn.cshtml";
+    Layout = null;
 }
 
-<h2>Reply</h2>
-<hr/>
+<!DOCTYPE html>
 
-@using (Html.BeginForm("Reply","Requisitions",FormMethod.Post)) 
-{
-    @Html.AntiForgeryToken()
-
-    <div class="form-horizontal">
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Reply</title>
+</head>
+<body>
+    @using (Html.BeginForm("Reply","Requisitions",FormMethod.Post)) 
+    {
+        @Html.AntiForgeryToken()
         
-        @Html.HiddenFor(model => model.Id)
-        @Html.HiddenFor(model => model.RequisitionId)
-        @Html.Hidden("returnUrl", this.Request.RawUrl)
-        @Html.ValidationSummary(true, "", new {@class = "text-danger"})
+        <div class="form-horizontal">
+            <h4>Reply</h4>
+            <hr />
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.LabelFor(model => model.CommentText, htmlAttributes: new {@class = "control-label col-md-2"})
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.CommentText, new {htmlAttributes = new {@class = "form-control"}})
+                    @Html.ValidationMessageFor(model => model.CommentText, "", new {@class = "text-danger"})
+                </div>
+            </div>
 
-        <div class="form-group row">
-            @if (ViewBag.Msg != null)
-            {
-                <div>@ViewBag.Msg</div>
-            }
-        </div>
+            
 
-
-        <div class="form-group row">
-            @Html.Label("Put your reply here", htmlAttributes: new { @class = "control-label col-md-12" })
-            <div class="col-md-12">
-                @Html.EditorFor(model => model.CommentText, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CommentText, "", new { @class = "text-danger" })
+            <div class="form-group" hidden="hidden">
+                @Html.LabelFor(model => model.RequisitionId, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.RequisitionId, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.RequisitionId, "", new { @class = "text-danger" })
+                </div>
+            </div>
+    
+            <div class="form-group" hidden="hidden">
+                @Html.LabelFor(model => model.FeedbackId, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.FeedbackId, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.FeedbackId, "", new { @class = "text-danger" })
+                </div>
+            </div>
+    
+            <div class="form-group" hidden="hidden">
+                @Html.LabelFor(model => model.EmployeeId, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.EmployeeId, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.EmployeeId, "", new { @class = "text-danger" })
+                </div>
+            </div>
+    
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Reply" class="btn btn-default" />
+                </div>
             </div>
         </div>
-
-
-        <div class="form-group row" hidden="hidden">
-            @Html.LabelFor(model => model.EmployeeId, htmlAttributes: new { @class = "control-label col-md-12" })
-            <div class="col-md-3">
-                @Html.EditorFor(model => model.EmployeeId, new { htmlAttributes = new { @class = "form-control" } })
-            </div>
-        </div>
-
-        <div class="form-group row">
-            <div class="col-md-5">
-                <input type="submit" value="Reply" class="btn btn-primary"/> &nbsp;
-                @Html.ActionLink("Back to List", "Create","Requisitions",new {@class="btn btn-primary"})
-            </div>
-        </div>
+    }
+    
+    <div>
+        @Html.ActionLink("Back to List", "Index")
     </div>
-}
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+</body>
+</html>
