--- a/RMS.App/Views/Shared/_ControllerNotification.cshtml
+++ b/RMS.App/Views/Shared/_ControllerNotification.cshtml
@@ -6,29 +6,29 @@
     <li class="dropdown">
         @if (@ViewBag.count > 0)
         {
-            <a title="Unread notifications!" class="btn-outline-info" data-toggle="dropdown"><i class="fa fa-bell"></i><span class="text-danger font-weight-bold" style="font-size: 16px;">@ViewBag.count</span></a>
+            <a title="Unread notifications!" class="btn-outline-info" data-toggle="dropdown"><i class="fa fa-bell text-black"></i><span class="text-danger font-weight-bold" style="font-size: 16px;">@ViewBag.count</span></a>
         }
         else
         {
-            <a title="You have no unread notifications!" class="btn-outline-info" data-toggle="dropdown"><i class="fa fa-bell"></i><span class="font-weight-bold" style="font-size: 16px;"></span></a>
+            <a title="You have no unread notifications!" class="btn-outline-info" data-toggle="dropdown"><i class="fa fa-bell text-black"></i><span class="font-weight-bold" style="font-size: 16px;"></span></a>
         }
 
         <ul class="dropdown-menu">
-
+            <li style="padding: 0 5px;"> New</li>
+            <hr />
             @if (ViewBag.Notification != null)
             {
                 var data = ViewBag.Notification;
-                <li style="padding: 0 5px;"> New </li>
-                                    <hr />
+                
                 foreach (var dt in data)
                 {
 
-                    <li style="padding: 0 5px;"><a href="@Url.Action("Create", "AssignRequisitions", new {requisitionId = dt.RequisitionId})" class=""> Mr. @dt.Employee.FullName &nbsp; @dt.ControllerText &nbsp; Req No: @dt.Requisition.RequisitionNumber &nbsp; @dt.ControllerNotifyDateTime.ToString("hh:mm tt")</a></li>
-                                        <hr />
+                    <li style="padding: 0 5px;"><a href="@Url.Action("Create", "AssignRequisitions", new {requisitionId = dt.RequisitionId})" class="text-black"> Mr. @dt.Employee.FullName &nbsp; @dt.ControllerText &nbsp; Req No: @dt.Requisition.RequisitionNumber &nbsp; @dt.ControllerNotifyDateTime.ToString("hh:mm tt")</a></li>
+                     <hr/>
                 }
-                <li class="text-center"><a href="@Url.Action("AllNotification", "Notifications")">See All</a></li>
+               
             }
-
+            <li class="text-center"><a href="@Url.Action("AllNotification", "Notifications")" class="text-black">See All</a></li>
 
         </ul>
     </li>
