--- a/RMS.App/Views/AssignRequisitions/CompleteRequest.cshtml
+++ b/RMS.App/Views/AssignRequisitions/CompleteRequest.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<RMS.App.ViewModels.RequisitionStatusViewModel>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Complete Requisition";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @section styles
@@ -13,7 +13,7 @@
 
 }
 <div class="container">
-    <h2>Assigned Requisition</h2>
+    <h2>Complete Requisition</h2>
     <hr />
 
     @if (TempData["msg"] != null)
