--- a/RMS.App/Views/GatePass/Index.cshtml
+++ b/RMS.App/Views/GatePass/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<RMS.App.ViewModels.RequisitionStatusViewModel>
 
 @{
-    ViewBag.Title = "Check-Out List";
+    ViewBag.Title = "Check-In/Out List";
 }
 @section styles
 {
@@ -11,7 +11,7 @@
     <link href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap.min.css" rel="stylesheet"/>
 
 }
-<h2>Check-OUT Check-IN</h2>
+<h3>Check-In/Out List</h3>
 <hr/>
 <br/>
 <table id="example1" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: 100%">
