--- a/RMS.App/Views/Notifications/Index.cshtml
+++ b/RMS.App/Views/Notifications/Index.cshtml
@@ -12,12 +12,12 @@
     <link href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap.min.css" rel="stylesheet" />
 
 }
-<h2>Your Notifications</h2>
+<h2 class="text-center">Your Notifications</h2>
 <br/>
 <div class="container">
     <table id="example1" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: 100%">
         <thead>
-            <tr>
+            <tr class="bg-info">
                 <th>
                     SL
                 </th>
@@ -46,7 +46,7 @@
             }
         </tbody>
         <tfoot>
-            <tr>
+            <tr class="bg-secondary text-white">
                 <th>
                     SL
                 </th>
