--- a/RMS.App/Views/Queue/GetMessage.cshtml
+++ b/RMS.App/Views/Queue/GetMessage.cshtml
@@ -1,9 +1,19 @@
 ﻿@model IEnumerable<RMS.App.ViewModels.ContactViewModel>
 
 @{
-    ViewBag.Title = "Setup Queue";
+    ViewBag.Title = "Messages";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+@section styles
+{
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css" />
+    <link href="https://cdn.datatables.net/1.10.19/css/dataTables.semanticui.min.css" rel="stylesheet" />
+
+    <link href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap.min.css" rel="stylesheet" />
+
+}
+
 @if (TempData["msg"] != null)
 {
 
@@ -11,8 +21,16 @@
         @Html.Raw(TempData["msg"])
     </div>
 }
-<table class="table">
-    <tr>
+<h3>All Message </h3>
+<hr />
+<table id="example" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: 100%">
+    <thead>
+
+    <tr class="bg-info">
+
+        <th>
+            SL
+        </th>
         <th>
             @Html.DisplayNameFor(model => model.Email)
         </th>
@@ -22,27 +40,81 @@
         <th>
             @Html.DisplayNameFor(model => model.Message)
         </th>
-        <th></th>
+        <th>
+            Action
+        </th>
     </tr>
+    </thead>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PhoneNo)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Message)
-        </td>
-        <td>
-            @*@Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })*@
-            @Html.ActionLink("Reply","ReplyMail","Queue",new {email=item.Email},null)
-        </td>
+    <tbody>
+    
+    @{
+        var sl = 0;
+        if (Model.Count() != 0)
+        {
+            foreach (var item in Model)
+            {
+                sl++;
+                <tr>
+                    <td>
+                        @sl
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Email)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.PhoneNo)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Message)
+                    </td>
+                    <td>
+                        @*@Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+                            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
+                            @Html.ActionLink("Delete", "Delete", new { id=item.Id })*@
+                        @Html.ActionLink("Reply", "ReplyMail", "Queue", new {email = item.Email}, null)
+                    </td>
+                </tr>
+            }
+        }
+    }
+
+    </tbody>
+    <tfoot>
+    <tr class="bg-secondary text-white">
+        <th>
+            SL
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Email)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.PhoneNo)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Message)
+        </th>
+        <th>
+            Action
+        </th>
     </tr>
-}
-
+    </tfoot>
 </table>
+
+@section scripts
+{
+
+    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js" type="text/javascript"></script>
+    <script src="https://cdn.datatables.net/1.10.19/js/dataTables.semanticui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.js"></script>
+
+    <script type="text/javascript" src="https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/responsive/2.2.3/js/responsive.bootstrap.min.js"></script>
+
+
+    <script>
+        $(document).ready(function () {
+            $('#example').DataTable();
+        });
+    </script>
+}
