--- a/RMS.App/Views/Queue/RequisitionQueue.cshtml
+++ b/RMS.App/Views/Queue/RequisitionQueue.cshtml
@@ -75,7 +75,7 @@
         <div class="card text-white bg-success o-hidden h-100">
             <div class="card-body">
                 <div class="card-body-icon">
-                    <i class="fa fa-fw fa-shopping-cart"></i>
+                    <i class="fa fa-calendar-check-o"></i>
                 </div>
                 <div class="mr-5">
                     <h3>@ViewBag.CompleteRequisition</h3>
@@ -99,10 +99,10 @@
     </div>
     <div class="card-body">
             <p>
-                @ViewBag.EmployeeCount Total Employee Has been Registered 
+                <span class="font-weight-bold" style="font-size: 18px;">@ViewBag.EmployeeCount</span> Total Employee Has been Registered 
                 <a href="@Url.Action("GetAllEmployee", "Employees")">View Details</a>
                 <br />
-                @ViewBag.DriverCount Total Driver Registered
+                <span class="font-weight-bold" style="font-size: 18px;">@ViewBag.DriverCount</span> Total Driver Registered
                 <a href="@Url.Action("GetAllDriver", "Employees")">View Details</a>
             </p>
     </div>
@@ -153,7 +153,7 @@
         <div class="card text-white bg-secondary o-hidden h-100">
             <div class="card-body">
                 <div class="card-body-icon">
-                    <i class="fa fa-fw fa-support"></i>
+                    <i class="fa fa-table"></i>
                 </div>
                 <div class="mr-5">
                     <h3>@ViewBag.AllRequisitionCount</h3> 
@@ -172,7 +172,7 @@
         <div class="card text-white bg-danger o-hidden h-100">
             <div class="card-body">
                 <div class="card-body-icon">
-                    <i class="fa fa-fw fa-shopping-cart"></i>
+                    <i class="fa fa-trash-o"></i>
                 </div>
                 <div class="mr-5">
                     <h3>@ViewBag.CancelRequisition</h3> 
