--- a/RMS.App/Views/Feedback/Edit.cshtml
+++ b/RMS.App/Views/Feedback/Edit.cshtml
@@ -15,6 +15,8 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
+        @Html.HiddenFor(model => model.RequisitionId)
+        @Html.HiddenFor(model => model.EmployeeId)
 
         <div class="form-group">
             @Html.LabelFor(model => model.CommentText, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -50,7 +52,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Update" class="btn btn-default" />
             </div>
         </div>
     </div>
